# mctdh_input_generator

./: LICENSE  README.md  pyproject.toml
docs/: guidelines.md
examples/: hamiltonian_test.txt  test_subsections.py
mctdh_input.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
mctdh_input/builders/: hamiltonian_builder.py
mctdh_input/utils/: electronic_ops.py  generate_vibronic_couplings_dictionary.py  nuclear_kinetic_ops.py  nuclear_potential_ops.py  vibronic_ops.py
tests/: test_hamiltonian_builder.py
