# pyproject.toml

[project]
name = "mctdh_input"
version = "0.1.0"
description = "MCTDH input file generator"
authors = [
    { name="Alejandro Zepeda Herrera", email="azepeda1297@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
